增加国际化

--- a/file/src/main/res/values/strings.xml
+++ b/file/src/main/res/values/strings.xml
@@ -5,49 +5,49 @@
     <string name="zfile_sharedElement_video">zfile_jump_Video</string>
 
     <!--   下面重写即可自定义   -->
-    <string name="zfile_title">文件管理</string>
-    <string name="zfile_menu_down">完成</string>
-    <string name="zfile_root_path">根目录</string>
-    <string name="zfile_path">指定目录</string>
-    <string name="zfile_menu_order">排序方式</string>
-    <string name="zifle_menu_hidden">不显示隐藏文件</string>
-    <string name="zfile_menu_show">显示隐藏文件</string>
-    <string name="zfile_sort_title">排序方式</string>
-    <string name="zfile_sort_default">&#160;默认（无顺序）</string>
-    <string name="zfile_sort_by_name">&#160;名称</string>
-    <string name="zfile_sort_by_time">&#160;时间</string>
-    <string name="zfile_sort_by_size">&#160;大小</string>
-    <string name="zfile_sort_ss">顺序</string>
-    <string name="zfile_sort_sx">&#160;升序</string>
-    <string name="zfile_sort_jx">&#160;降序</string>
-    <string name="zfile_down">确定</string>
-    <string name="zfile_cancel">取消</string>
-    <string name="zfile_info_title">文件详情</string>
-    <string name="zfile_info_name">文件名称：</string>
-    <string name="zfile_info_type">文件类型：</string>
-    <string name="zfile_info_size">文件大小：</string>
-    <string name="zfile_info_time">修改时间：</string>
-    <string name="zfile_info_path">文件路径：</string>
-    <string name="zfile_info_more">显示更多</string>
-    <string name="zfile_info_duration">媒体时长：</string>
-    <string name="zfile_info_loadding">获取中</string>
-    <string name="zfile_info_wh">宽高比率：</string>
-    <string name="zfile_info_other">其他信息：</string>
-    <string name="zfile_select_forder">请选择文件夹</string>
-    <string name="zfile_info_rename">请输入文件名称</string>
-    <string name="zifle_rename_title">文件重命名</string>
-    <string name="zfile_pic">图片</string>
-    <string name="zfile_video">视频</string>
-    <string name="zfile_txt">文档</string>
-    <string name="zfile_other">其他</string>
-    <string name="zfile_loading">请稍后</string>
-    <string name="zfile_qw_loading" tools:ignore="TypographyEllipsis">文件获取中...</string>
-    <string name="zfile_duplicate">副本_</string>
-    <string name="zfile_permission_bad">权限申请失败</string>
-    <string name="zfile_11_title">温馨提示</string>
-    <string name="zfile_11_content">访问文件需要您同意“允许访问所有文件权限”才能正常使用！</string>
-    <string name="zfile_11_bad">同意“允许访问所有文件权限”才能正常使用！</string>
-    <string name="zfile_permission_bad2">您已拒绝权限的申请，该功能暂时无法使用，请您同意权限后继续！</string>
-    <string name="zfile_permission_bad3">重新获取</string>
+    <string name="zfile_title">File management</string>
+    <string name="zfile_menu_down">Finish</string>
+    <string name="zfile_root_path">Root directory</string>
+    <string name="zfile_path">Specify the directory</string>
+    <string name="zfile_menu_order">Sort by</string>
+    <string name="zifle_menu_hidden">Do not show hidden files</string>
+    <string name="zfile_menu_show">Show hidden files</string>
+    <string name="zfile_sort_title">Sort by</string>
+    <string name="zfile_sort_default">&#160;Default (no order)</string>
+    <string name="zfile_sort_by_name">&#160;Name</string>
+    <string name="zfile_sort_by_time">&#160;Time</string>
+    <string name="zfile_sort_by_size">&#160;Size</string>
+    <string name="zfile_sort_ss">Order</string>
+    <string name="zfile_sort_sx">&#160;Ascending</string>
+    <string name="zfile_sort_jx">&#160;Descending</string>
+    <string name="zfile_down">Sure</string>
+    <string name="zfile_cancel">Cancel</string>
+    <string name="zfile_info_title">File details</string>
+    <string name="zfile_info_name">File name:</string>
+    <string name="zfile_info_type">File type:</string>
+    <string name="zfile_info_size">File size:</string>
+    <string name="zfile_info_time">Change the time:</string>
+    <string name="zfile_info_path">File path:</string>
+    <string name="zfile_info_more">Display more</string>
+    <string name="zfile_info_duration">Media duration:</string>
+    <string name="zfile_info_loadding">Acquiring</string>
+    <string name="zfile_info_wh">Aspect ratio:</string>
+    <string name="zfile_info_other">Other information:</string>
+    <string name="zfile_select_forder">Please select a folder</string>
+    <string name="zfile_info_rename">Please enter the file name</string>
+    <string name="zifle_rename_title">File rename</string>
+    <string name="zfile_pic">Picture</string>
+    <string name="zfile_video">Video</string>
+    <string name="zfile_txt">Txt</string>
+    <string name="zfile_other">Other</string>
+    <string name="zfile_loading">Loading</string>
+    <string name="zfile_qw_loading" tools:ignore="TypographyEllipsis">File acquisition...</string>
+    <string name="zfile_duplicate">Copy_</string>
+    <string name="zfile_permission_bad">Permission request failed</string>
+    <string name="zfile_11_title">Tips</string>
+    <string name="zfile_11_content">To access the file, you need to agree to "Allow access to all file permissions" in order to use it normally!</string>
+    <string name="zfile_11_bad">Agree to "Allow access to all file permissions" for normal use!</string>
+    <string name="zfile_permission_bad2">You have rejected the permission request. This function is temporarily unavailable. Please continue after agreeing to the permission!</string>
+    <string name="zfile_permission_bad3">Reacquire</string>
 
 </resources>
