--- a/file/src/main/res/values/strings.xml
+++ b/file/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <!--   下面重写即可自定义   -->
     <string name="zfile_title">File management</string>
     <string name="zfile_menu_down">Finish</string>
+    <string name="zfile_menu_search">Search</string>
     <string name="zfile_root_path">Root directory</string>
     <string name="zfile_path">Specify the directory</string>
     <string name="zfile_menu_order">Sort by</string>
