--- a/file/src/main/res/values-zh-rTW/strings.xml
+++ b/file/src/main/res/values-zh-rTW/strings.xml
@@ -55,5 +55,6 @@
 
     <string name="zfile_qq_title">QQ文件</string>
     <string name="zfile_we_chart_title">微信文件</string>
+    <string name="zfile_selected_title">已選中%d個文件</string>
 
 </resources>
