--- a/file/src/main/res/values-zh-rCN/strings.xml
+++ b/file/src/main/res/values-zh-rCN/strings.xml
@@ -58,4 +58,11 @@
     <string name="zfile_dialog_delete_content">您确定要删除吗？</string>
     <string name="zfile_dialog_delete">删除</string>
 
+    <string name="zfile_menu_rename">重命名</string>
+    <string name="zfile_menu_copy">复制</string>
+    <string name="zfile_menu_move">移动</string>
+    <string name="zfile_menu_delete">删除</string>
+    <string name="zfile_menu_detail">查看详情</string>
+    <string name="zfile_menu_unzip">解压</string>
+
 </resources>
