--- a/file/src/main/res/values-zh-rCN/strings.xml
+++ b/file/src/main/res/values-zh-rCN/strings.xml
@@ -68,4 +68,6 @@
     <string name="zfile_rename_success">重命名成功</string>
     <string name="zfile_rename_fail">重命名失败</string>
 
+    <string name="zfile_open_file_fail">文件类型可能不匹配或找不到打开该文件类型的程序，打开失败</string>
+
 </resources>
