--- a/file/src/main/res/values/strings.xml
+++ b/file/src/main/res/values/strings.xml
@@ -68,11 +68,12 @@
     <string name="zfile_rename_success">Rename success</string>
     <string name="zfile_rename_fail">Rename fail</string>
 
-    <string name="zfile_open_file_fail">The file type may not match or the program to open the file type could not be found, and the opening failed</string>
-
     <string name="zfile_menu_open">Open</string>
     <string name="zfile_menu_selected">Selected</string>
 
-    <string name="zfile_not_support">Previewing the file is not currently supported</string>
+    <string name="zfile_dialog_preview">File preview</string>
+    <string name="zfile_dialog_preview_tip">This file needs to open a third-party application for preview. Do you want to open the default application?</string>
+    <string name="zfile_dialog_open_preview_tip">This file needs to be previewed by a third-party application, and there is no program to open the file type locally. Do you want to open the application store?</string>
+    <string name="zfile_dialog_no_store">Your phone currently does not have an app store installed</string>
 
 </resources>
