新增新建文件夹

--- a/file/src/main/res/values-zh-rCN/strings.xml
+++ b/file/src/main/res/values-zh-rCN/strings.xml
@@ -10,6 +10,7 @@
     <string name="zfile_menu_search">搜索</string>
     <string name="zfile_root_path">根目录</string>
     <string name="zfile_path">指定目录</string>
+    <string name="zfile_menu_add_file">新建文件夹</string>
     <string name="zfile_menu_order">排序方式</string>
     <string name="zifle_menu_hidden">不显示隐藏文件</string>
     <string name="zfile_menu_show">显示隐藏文件</string>
@@ -83,5 +84,10 @@
     <string name="zfile_item_desc_image">图片</string>
     <string name="zfile_item_desc_search_icon">搜索图标</string>
     <string name="zfile_item_desc_delete_icon">删除</string>
+
+    <string name="zfile_info_no">无</string>
+    <string name="zfile_dialog_rename_hint">请输入文件名称</string>
+    <string name="zfile_dialog_add_error">已存在此文件</string>
+    <string name="zfile_dialog_add_success">创建成功</string>
 
 </resources>
