--- a/file/src/main/res/values-zh-rCN/strings.xml
+++ b/file/src/main/res/values-zh-rCN/strings.xml
@@ -90,4 +90,7 @@
     <string name="zfile_dialog_add_error">已存在此文件</string>
     <string name="zfile_dialog_add_success">创建成功</string>
 
+    <string name="zfile_dialog_to_root">%s到根目录</string>
+    <string name="zfile_dialog_to_path">%s到%s</string>
+
 </resources>
