--- a/file/src/main/res/values-zh-rTW/strings.xml
+++ b/file/src/main/res/values-zh-rTW/strings.xml
@@ -92,4 +92,7 @@
     <string name="zfile_dialog_add_error">已存在此文件</string>
     <string name="zfile_dialog_add_success">創建成功</string>
 
+    <string name="zfile_dialog_to_root">%s到根目錄</string>
+    <string name="zfile_dialog_to_path">%s到%s</string>
+
 </resources>
